Align margins/paddings in mob.ver. Fix overlay eff

--- a/nft-preview-card-component-main/css/style.css
+++ b/nft-preview-card-component-main/css/style.css
@@ -146,11 +146,84 @@ footer a {
     text-decoration: none;
 }
 
-@media screen and (min-width:415px) {
-    body {
-        box-sizing: border-box;
-        max-width: 415px;
-        
-    }
+@media screen and (max-width:415px) {
     
+    body {
+        min-height: 630px;
+        min-width: 375px;
+    }
+
+    main {
+        /* min-width: 397px; */
+        min-width: 360px;
+        min-height: 635px;
+        border: 1px solid white;
+        margin: auto 7px; 
+        padding: 7px;
+        border-radius: 20px;
+
+    }
+
+    .picture img {
+        width: 320px;
+        height: 320px;
+        border-radius: 15px;
+        margin-left: -2px;
+        margin-top: 5px;
+        /* border: 1px dotted white; */
+    }
+
+    h1 {
+        color: hsl(0, 0%, 100%);
+        width: 65%;
+        margin-top: 30px;
+    }
+
+    hr {
+        border: 0.1px solid hsla(215, 51%, 70%, 15%);
+    }
+
+    .info {
+        /* border: 1px solid red; */
+        width: 325px;
+    }
+
+    .container {
+        display: grid;
+        grid-template-columns: 162px 155px;
+    }
+
+    div.picture {
+        height: 325px;
+        width: 325px;
+        padding-right: 40px;
+        /* border: 2px solid salmon; */
+    }
+
+    div.overlay {
+        position: relative;
+        top: -320px;
+        width: -60px;
+        padding: 40% 60% 60% 40%;
+        background-color:hsla(178, 100%, 50%, 40%);
+        border-radius: 15px;
+        opacity: 0%;
+    }
+
+    .avatar img {
+        width: 30px;
+        height: 30px;
+    }
+
+    div.media {
+        /* height: 349px;
+        width: 349px; */
+        height: 325px;
+        width: 325px;
+        margin-top: -5px;
+    }
+
+    footer {
+        display: none;
+    }
 }
